# ChangeLog for net-www/elinks
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-www/elinks/ChangeLog,v 1.15 2004/04/13 10:09:24 spock Exp $

  13 Apr 2004; Michal Januszewski <spock@gentoo.org> elinks-0.9.1.ebuild:
  Fixed a minor IUSE issue in the latest ebuild.

  09 Apr 2004; Michal Januszewski <spock@gentoo.org> elinks-0.4.2.ebuild,
  elinks-0.4.3_rc2.ebuild, elinks-0.9.1.ebuild:
  Changed all deps on xfree to virtual/x11, closes bug #47324.

  26 Feb 2004; Jason Wever <weeve@gentoo.org> elinks-0.9.1.ebuild:
  Marked stable on sparc.

  18 Feb 2004; Michal Januszewski <spock@gentoo.org> elinks-0.4.3_rc2.ebuild,
  elinks-0.9.1.ebuild:
  Marked stable on x86.

*elinks-0.9.1 (01 Feb 2004)

  01 Feb 2004; Michal Januszewski <spock@gentoo.org> elinks-0.4.2.ebuild,
  elinks-0.4.3_rc2.ebuild, elinks-0.9.1.ebuild, metadata.xml:
  Version bump. Fixed ebuild headers, removed mips, alpha and hppa from KEYWORDS
  as dependency on dev-lang/lua cannot be satisfied on this archs.

*elinks-0.4.3_rc2 (15 Sep 2003)

  15 Sep 2003; Seemant Kulleen <seemant@gentoo.org> elinks-0.4.3_rc2.ebuild:
  version bump to rc2 of next stable version

  15 Sep 2003; Seemant Kulleen <seemant@gentoo.org> elinks-0.4.1.ebuild,
  elinks-0.4.2.ebuild:
  changed the lua dependency to be on the 4.0 branch, as elinks can't read the
  5.0 branch. Thanks to: jmw@operamail.com in bug #27504

  27 Jun 2003; Christian Birchinger <joker@gentoo.org> elinks-0.4.2.ebuild:
  Marked stable on x86

  23 Jun 2003; Jason Wever <weeve@gentoo.org> elinks-0.4.2.ebuild:
  Changed ~sparc keyword to sparc to fix bug #23325.

*elinks-0.4.2 (16 Mar 2003)

  16 Mar 2003; Seemant Kulleen <seemant@gentoo.org> elinks-0.4.1.ebuild,
  elinks-0.4.2.ebuild, files/elinks.conf.bz2:
  moved the conf bz2's to mirrors, and version bump thanks to j2 in #gentoo-dev
  in bug #15126

  25 Jan 2002; Olivier Reisch <doctomoe@gentoo.org> : elinks-0.4.1.ebuild: