@@ -1,7 +1,7 @@
 MD5 c9a788d4076f90a13e8abc4b41db9aa7 elinks-0.4.2.ebuild 2721
-MD5 4d010612e79f9d984971bc2b91bf0938 elinks-0.9.1.ebuild 3019
+MD5 2cd5a63c9a28116faa2f0b8eb49c0e10 elinks-0.9.1.ebuild 3017
 MD5 ee9e33a9e9862b891379224ae187a5ae elinks-0.4.3_rc2.ebuild 2763
-MD5 7b2547c599898c052a850b35aa7186ac ChangeLog 2440
+MD5 a626ee60048f89d254eba5c9da3c92ac ChangeLog 2589
 MD5 d94d306da3804e41296e1bf04c7c9cae metadata.xml 255
 MD5 197f5b6299b8a88d767c58726add73a9 files/digest-elinks-0.4.2 129
 MD5 40264c1b77fa85cf762b84c042837d8f files/digest-elinks-0.9.1 130
