@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-www/elinks/elinks-0.9.1.ebuild,v 1.5 2004/04/13 10:09:24 spock Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/elinks/elinks-0.9.1.ebuild,v 1.6 2004/04/16 17:04:27 spock Exp $
 
 IUSE="gpm zlib ssl ipv6 X lua guile"
 
@@ -22,7 +22,7 @@ DEPEND="virtual/glibc
 	ssl? ( >=dev-libs/openssl-0.9.6g )
 	X? ( virtual/x11 )
 	zlib? ( >=sys-libs/zlib-1.1.4 )
-	lua? ( =dev-lang/lua-4.0* )
+	lua? ( >=dev-lang/lua-4* )
 	gpm? ( >=sys-libs/ncurses-5.2* >=sys-libs/gpm-1.20.0-r5 )
 	guile? ( >=dev-util/guile-1.6.4-r1 )"
 
@@ -32,7 +32,7 @@ RDEPEND="virtual/glibc
 	>=app-arch/gzip-1.3.3
 	ssl? ( >=dev-libs/openssl-0.9.6g )
 	zlib? ( >=sys-libs/zlib-1.1.4 )
-	lua? ( =dev-lang/lua-4.0* )
+	lua? ( >=dev-lang/lua-4* )
 	gpm? ( >=sys-libs/ncurses-5.2* >=sys-libs/gpm-1.20.0-r5 )
 	X? ( virtual/x11 )
 	guile? ( >=dev-util/guile-1.6.4-r1 )"
