@@ -1,6 +1,9 @@
 # ChangeLog for net-www/elinks
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-www/elinks/ChangeLog,v 1.15 2004/04/13 10:09:24 spock Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/elinks/ChangeLog,v 1.16 2004/04/16 17:04:27 spock Exp $
+
+  16 Apr 2004; Michal Januszewski <spock@gentoo.org> elinks-0.9.1.ebuild:
+  Changed the deps to support both lua-4* and lua-5*. This closes #48034.
 
   13 Apr 2004; Michal Januszewski <spock@gentoo.org> elinks-0.9.1.ebuild:
   Fixed a minor IUSE issue in the latest ebuild.
